# nutc25041lab_hw

./: .env.sample  .gitignore  README.md  color.css  index.html  main.py  main_cw1.py  main_cw2.py  main_hw.py  pyproject.toml  uv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
day5/: 1111032045_RAG_HW_01.csv  1111032045_RAG_HW_01.odt  1111032045_RAG_HW_01.py
graph/: builder.py
models/: builder.py  structured_invoke.py
nodes/: cache_checking.py  chat.py  coordinator.py  planner.py
prompt/: AGENT.md  AGENT_AUDIO.md  AUDIO.md  CHAT.md  CHAT_INPUT.md  COORDINATOR.md  CW2-1.md  CW2-2.md  CW2_INPUT.md  INPUT.md  PLANNER.md  PLANNER_INPUT.md  prompt.py
tools/: searxng.py
utils/: configuration.py  logger.py  maybe_this_this_speech_to_text.py  qdrant.py  spliter.py  state.py  vector.py
