[project]
name = "idk-but-this-is-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
]
