[project]
name = "idk-but-this-is-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-google-genai>=4.2.0",
    "langchain-nvidia-ai-endpoints>=1.0.3",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "qdrant-client>=1.16.2",
    "ruff>=0.15.0",
    "semantic-text-splitter>=0.29.0",
]
